<resources>
    <string name="app_name">Programmer Calcuator</string>
    <string name="hex">Hex</string>
    <string name="dec">Dec</string>
    <string name="oct">Oct</string>
    <string name="bin">Bin</string>
    <string name="_0">0</string>
    <string name="f">F</string>
    <string name="e">E</string>
    <string name="d">D</string>
    <string name="c">C</string>
    <string name="b">B</string>
    <string name="a">A</string>
    <string name="left_pracet">(</string>
    <string name="right_pracet">)</string>
    <string name="equal">=</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="div">/</string>
    <string name="multi">*</string>
    <string name="delete">del</string>
    <string name="delete_all">CE</string>
    <string name="present">%</string>
    <string name="my_spinner_description">description</string>

    <string name="selected_item">Selected item:</string>
    <string name="your_enter_number">your enter number</string>
    <string name="decimal">Decimal</string>
    <string name="hexadecimal">HexaDecimal</string>
    <string name="octal">Octal</string>
    <string name="binary">Binary</string>
    <string-array name="my_spinner_choices">
        <item>Binary</item>
        <item>HexaDecimal</item>
        <item>Decimal</item>
        <item>Octal</item>
    </string-array>

</resources>