<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red_50"
    tools:context="com.example.programmercalculator.MainActivity">

    <TextView
        android:id="@+id/text_input"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="@dimen/margin_big"
        android:background="@drawable/text_view_background"
        android:padding="@dimen/padding_under_mid"
        android:textSize="@dimen/big_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_big"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/left_bracket"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input"
        app:layout_constraintVertical_bias="0.043">

        <RadioButton
            android:id="@+id/hex_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:text="@string/hex"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/dec_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginTop="@dimen/margin_mid"
            android:text="@string/dec"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/oct_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginTop="@dimen/margin_mid"
            android:text="@string/oct"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/bin_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginTop="@dimen/margin_mid"
            android:text="@string/bin"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>

    <TextView
        android:id="@+id/hex_text"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:gravity="center|start"
        android:hint="@string/_0"
        android:padding="@dimen/padding_small"
        android:paddingStart="@dimen/padding_mid"
        android:textColor="@color/navy"
        android:textSize="@dimen/big_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toTopOf="@+id/radioGroup"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/dec_text"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginTop="@dimen/margin_mid"
        android:gravity="center|start"
        android:hint="@string/_0"
        android:padding="@dimen/padding_small"
        android:paddingStart="@dimen/padding_mid"
        android:textColor="@color/navy"
        android:textSize="@dimen/big_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/hex_text"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/octal_text"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginTop="@dimen/margin_mid"
        android:gravity="center|start"
        android:hint="@string/_0"
        android:padding="@dimen/padding_small"
        android:paddingStart="@dimen/padding_mid"
        android:textColor="@color/navy"
        android:textSize="@dimen/big_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/dec_text"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/binary_text"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginTop="@dimen/margin_mid"
        android:gravity="center|start"
        android:hint="@string/_0"
        android:padding="@dimen/padding_small"
        android:paddingStart="@dimen/padding_mid"
        android:textColor="@color/navy"
        android:textSize="@dimen/big_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/octal_text"
        tools:ignore="RtlSymmetry" />


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_big"
        android:background="@drawable/view_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/button_F"
        style="@style/Button.Char"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginBottom="@dimen/margin_big"
        android:onClick="onClickNumber"
        android:text="@string/f"
        app:backgroundTint="@color/red_300"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/button_E"
        style="@style/Button.Char"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginBottom="@dimen/margin_mid"
        android:onClick="onClickNumber"
        android:text="@string/e"
        app:backgroundTint="@color/red_300"
        app:layout_constraintBottom_toTopOf="@id/button_F"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_D"
        style="@style/Button.Char"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginBottom="@dimen/margin_mid"
        android:onClick="onClickNumber"
        android:text="@string/d"
        app:backgroundTint="@color/red_300"
        app:layout_constraintBottom_toTopOf="@id/button_E"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_C"
        style="@style/Button.Char"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginBottom="@dimen/margin_mid"
        android:onClick="onClickNumber"
        android:text="@string/c"
        app:backgroundTint="@color/red_300"
        app:layout_constraintBottom_toTopOf="@id/button_D"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_B"
        style="@style/Button.Char"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginBottom="@dimen/margin_mid"
        android:onClick="onClickNumber"
        android:text="@string/b"
        app:backgroundTint="@color/red_300"
        app:layout_constraintBottom_toTopOf="@id/button_C"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/button_A"
        style="@style/Button.Char"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginBottom="@dimen/margin_mid"
        android:onClick="onClickNumber"
        android:text="@string/a"
        app:backgroundTint="@color/red_300"
        app:layout_constraintBottom_toTopOf="@id/button_B"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/left_bracket"
        style="@style/Button.Number"
        android:layout_marginBottom="@dimen/margin_big"
        android:onClick="onClickNumber"
        android:text="@string/left_pracet"
        android:textColor="@color/white"
        app:backgroundTint="@color/red_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_zero"
        app:layout_constraintStart_toEndOf="@+id/button_F" />

    <Button
        android:id="@+id/button_zero"
        style="@style/Button.Number"
        android:layout_marginBottom="@dimen/margin_big"
        android:onClick="onClickNumber"
        android:text="@string/_0"
        app:backgroundTint="@color/red_50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/right_bracket"
        style="@style/Button.Number"
        android:layout_marginStart="@dimen/margen_under_big"
        android:layout_marginBottom="@dimen/margin_big"
        android:onClick="onClickNumber"
        android:text="@string/right_pracet"
        android:textColor="@color/white"
        app:backgroundTint="@color/red_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_result"
        app:layout_constraintHorizontal_bias="0.277"
        app:layout_constraintStart_toEndOf="@+id/button_zero" />

    <Button
        android:id="@+id/button_result"
        style="@style/Button.Equal"
        android:layout_height="128dp"
        android:layout_marginEnd="@dimen/margin_big"
        android:layout_marginBottom="@dimen/margin_big"
        android:text="@string/equal"
        app:backgroundTint="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <Button
        android:id="@+id/button_num_one"
        style="@style/Button.Number"
        android:layout_marginBottom="@dimen/margin_mid"
        android:onClick="onClickNumber"
        android:text="@string/one"
        app:backgroundTint="@color/red_50"
        app:layout_constraintBottom_toTopOf="@+id/left_bracket"
        app:layout_constraintEnd_toStartOf="@+id/button_zero"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toEndOf="@+id/button_E" />

    <Button
        android:id="@+id/button_num_two"
        style="@style/Button.Number"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginBottom="@dimen/margin_mid"
        android:onClick="onClickNumber"
        android:text="@string/two"
        app:backgroundTint="@color/red_50"
        app:layout_constraintBottom_toTopOf="@+id/button_zero"
        app:layout_constraintStart_toEndOf="@+id/button_num_one" />

    <Button
        android:id="@+id/button_num_three"
        style="@style/Button.Number"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginBottom="@dimen/margin_mid"
        android:onClick="onClickNumber"
        android:text="@string/three"
        app:backgroundTint="@color/red_50"
        app:layout_constraintBottom_toTopOf="@+id/left_bracket"
        app:layout_constraintStart_toEndOf="@+id/button_num_two" />

    <Button
        android:id="@+id/button_num_four"
        style="@style/Button.Number"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginBottom="@dimen/margin_mid"
        android:onClick="onClickNumber"
        android:text="@string/four"
        app:backgroundTint="@color/red_50"
        app:layout_constraintBottom_toTopOf="@+id/button_num_one"
        app:layout_constraintStart_toEndOf="@+id/button_E" />

    <Button
        android:id="@+id/button_num_five"
        style="@style/Button.Number"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginBottom="@dimen/margin_mid"
        android:onClick="onClickNumber"
        android:text="@string/five"
        app:backgroundTint="@color/red_50"
        app:layout_constraintBottom_toTopOf="@+id/button_num_two"
        app:layout_constraintStart_toEndOf="@+id/button_num_four" />

    <Button
        android:id="@+id/button_num_six"
        style="@style/Button.Number"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginBottom="@dimen/margin_mid"
        android:onClick="onClickNumber"
        android:text="@string/six"
        app:backgroundTint="@color/red_50"
        app:layout_constraintBottom_toTopOf="@+id/button_num_three"
        app:layout_constraintStart_toEndOf="@+id/button_num_five" />


    <Button
        android:id="@+id/button_num_seven"
        style="@style/Button.Number"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginBottom="@dimen/margin_mid"
        android:onClick="onClickNumber"
        android:text="@string/seven"
        app:backgroundTint="@color/red_50"
        app:layout_constraintBottom_toTopOf="@+id/button_num_four"
        app:layout_constraintStart_toEndOf="@+id/button_E" />

    <Button
        android:id="@+id/button_num_eight"
        style="@style/Button.Number"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginBottom="@dimen/margin_mid"
        android:onClick="onClickNumber"
        android:text="@string/eight"
        app:backgroundTint="@color/red_50"
        app:layout_constraintBottom_toTopOf="@+id/button_num_five"
        app:layout_constraintStart_toEndOf="@+id/button_num_seven" />

    <Button
        android:id="@+id/button_num_nine"
        style="@style/Button.Number"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginBottom="@dimen/margin_mid"
        android:onClick="onClickNumber"
        android:text="@string/nine"
        app:backgroundTint="@color/red_50"
        app:layout_constraintBottom_toTopOf="@+id/button_num_six"
        app:layout_constraintStart_toEndOf="@+id/button_num_eight" />

    <Button
        android:id="@+id/button_plus"
        style="@style/Button.Number"
        android:layout_marginEnd="@dimen/margin_big"
        android:layout_marginBottom="@dimen/margin_mid"
        android:text="@string/plus"
        android:textColor="@color/navy"
        app:backgroundTint="@color/red_300"
        app:layout_constraintBottom_toTopOf="@+id/button_result"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_minus"
        style="@style/Button.Number"
        android:layout_marginEnd="@dimen/margin_big"
        android:layout_marginBottom="@dimen/margin_mid"
        android:text="@string/minus"
        android:textColor="@color/navy"
        app:backgroundTint="@color/red_300"
        app:layout_constraintBottom_toTopOf="@+id/button_plus"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_div"
        style="@style/Button.Number"
        android:layout_marginEnd="@dimen/margin_big"
        android:layout_marginBottom="@dimen/margin_mid"
        android:text="@string/div"
        android:textColor="@color/navy"
        app:backgroundTint="@color/red_300"
        app:layout_constraintBottom_toTopOf="@+id/button_minus"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_multi"
        style="@style/Button.Number"
        android:layout_marginEnd="@dimen/margin_big"
        android:layout_marginBottom="@dimen/margin_mid"
        android:text="@string/multi"
        android:textColor="@color/navy"
        app:backgroundTint="@color/red_300"
        app:layout_constraintBottom_toTopOf="@+id/button_div"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_delete"
        style="@style/Button.Char"
        android:layout_marginEnd="@dimen/margin_big"
        android:layout_marginBottom="@dimen/margin_mid"
        android:text="@string/delete"
        android:textColor="@color/white"
        android:textSize="@dimen/mid_text"
        app:backgroundTint="@color/maroon"
        app:layout_constraintBottom_toTopOf="@+id/button_num_seven"
        app:layout_constraintEnd_toStartOf="@+id/button_div" />

    <Button
        android:id="@+id/button_delete_all"
        style="@style/Button.Char"
        android:layout_marginEnd="@dimen/margin_big"
        android:layout_marginBottom="@dimen/margin_mid"
        android:text="@string/delete_all"
        android:textColor="@color/white"
        android:textSize="@dimen/big_text"
        app:backgroundTint="@color/navy"
        app:layout_constraintBottom_toTopOf="@+id/button_num_seven"
        app:layout_constraintEnd_toStartOf="@+id/button_delete" />

    <Button
        android:id="@+id/button_present"
        style="@style/Button.Char"
        android:layout_marginBottom="@dimen/margin_mid"
        android:text="@string/present"
        android:textColor="@color/white"
        app:backgroundTint="@color/red_200"
        app:layout_constraintBottom_toTopOf="@+id/button_num_seven"
        app:layout_constraintEnd_toStartOf="@+id/button_delete_all"
        app:layout_constraintStart_toEndOf="@+id/button_B" />


</androidx.constraintlayout.widget.ConstraintLayout>